footer com image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <nav class="size-navbar">
+        <nav class="size">
             <div id="logo">
                 <img src="img/logo.PNG" alt="Logo" width="150px" height="25px">
             </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="container-form">
                 <form>
-                    <label>Envie seu curriculo</label>
+                    
                 </form>
             </div>
         </div>
@@ -78,6 +78,13 @@
             <img src="./img/vagas-01-01.png" id="imagem" alt="Pessoas" width="390px" height="390px">
         </div>
     </div>
+
+    <footer>
+        <div class="size">
+            <img src="img/logo.PNG" alt="Logo" width="150px" height="25px">
+            <p>Copyright&#169; 1997-2016</p>
+        </div>
+    </footer>
 </body>
 
 </html>
