--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <a href="#">Valores</a>
                     <a href="#">Áreas de Atuação</a>
                     <a href="#">Depoimentos</a>
-                    <a href="#">Vagas</a>      
-                </div>   
+                    <a href="#">Vagas</a>
+                </div>
             </div>
         </nav>
     </header>
@@ -70,7 +70,52 @@
             </div>
             <div class="container-form">
                 <form>
-                    
+                    <h3>Envie seu curriculo</h3>
+                    <div class="campo">
+                        <h4>Nome</h4>
+                        <input type="text" required>
+                    </div>
+                    <div class="campo">
+                        <h4>E-mail</h4>
+                        <input type="text" required>
+                    </div>
+                    <div class="campo">
+                        <h4>Cep</h4>
+                        <input type="text" required>
+                    </div>
+                    <div class="campo">
+                        <h4>Endereço</h4>
+                        <input type="text" required>
+                    </div>
+                    <div class="campo-left">
+                        <h4>Número</h4>
+                        <input type="text">
+                    </div>
+                    <div class="campo-right">
+                        <h4>Bairro</h4>
+                        <input type="text">
+                    </div>
+                    <div class="campo-left">
+                        <h4>Cidade</h4>
+                        <input type="text">
+                    </div>
+                    <div class="campo-right">
+                        <h4>Estado</h4>
+                        <input type="text">
+                    </div>
+                    <div class="anexos">
+                        <h4>Currículo</h4>
+                        <div class="half-input">
+                            <label for="arquivo" class="label-file-input">Anexar curriculo</label>
+                            <input type="file" id="arquivo">
+                            <p class="info">
+                                Todos os campos são obrigatórios<br>
+                                Tamanho máximo para upload - 10mb<br>
+                                Tipo do arquivo .pdf ou .doc
+                            </p>
+                        </div>
+                    </div>
+                    <input type="Submit" value="Enviar currículo" id="envio">
                 </form>
             </div>
         </div>
